applied font to h2

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@
   }
   
   h2 {
+    font-family: 'Montserrat', sans-serif;
       font-size: 40px;
       font-weight: 500;
       margin: 20px 0px;
