--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,9 @@
   }
   
   h2 {
-    font-family: 'Montserrat', sans-serif;
-      font-size: 40px;
-      font-weight: 500;
-      margin: 20px 0px;
-      color: #edf0f1;
+        margin: 50px 0px 20px;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 48px;
+        color: #edf0f1;
   }
