--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@
   }
   
   h2 {
+        font-family: 'Montserrat', sans-serif;
         margin: 50px 0px 20px;
         font-size: 36px;
         font-weight: 600;
