--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+/*Navbar styles*/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -53,11 +54,22 @@
       background-color: rgba(0, 136, 169, 0.8);
   }
   
-  h2 {
+
+
+    /*Heading styles*/
+ 
+    section h2 {
         font-family: 'Montserrat', sans-serif;
-        margin: 50px 0px 20px;
-        font-size: 36px;
-        font-weight: 600;
-        line-height: 48px;
+        padding: 0px 0;
+        font-size:14px; height:50px;
+        font-weight: normal;
+    }
+
+    h2 {
+        margin: 0px;
+        padding-top: 20px;
+        padding-right: 0px;
+        padding-bottom: 10px;
+        padding-left: 20px;
         color: #edf0f1;
   }
